--- a/.github/workflows/python-pip.yml
+++ b/.github/workflows/python-pip.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.x'  # 使用您项目的 Python 版本
+        python-version: '3.12.8'  # 使用 Python 3.12.8 版本
 
     - name: Install dependencies
       run: |
